Fixed cover__link overflowing container.

--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,27 +1,5 @@
 .cover__link {
     display: block;
     max-width: 1184px;
-    min-height: 720px;
     text-decoration: none;
-}
-
-@media screen and (max-width: 1024px) {
-    .cover__container {
-        max-width: 1024px;
-        min-height: 640px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .cover__container {
-        max-width: 768px;
-        min-height: 480px;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .cover__container {
-        max-width: 320px;
-        min-height: 200px;
-    }
 }
